# ComfyUI_ExternalAPI

./: LICENSE  README.md  __init__.py  pyproject.toml  requirements.txt
src/: nodes.py
src/models/: azure.py  base.py  gemini.py  openai.py  runwayml.py
src/settings/: base.py  image.py  video.py
tests/: conftest.py  test_nodes.py
