[project]
name = "externalapi"
description = "ComfyUI node package for BYOK (bring-your-own-key) access to external generative APIs: Gemini, Veo, and more via LiteLLM."
version = "1.0.0"
license = "MIT" 
# classifiers = [
#     # For OS-independent nodes (works on all operating systems)
#     "Operating System :: OS Independent",
#
#     # OR for OS-specific nodes, specify the supported systems:
#     "Operating System :: Microsoft :: Windows",  # Windows specific
#     "Operating System :: POSIX :: Linux",  # Linux specific
#     "Operating System :: MacOS",  # macOS specific
#
#     # GPU Accelerator support. Pick the ones that are supported by your extension.
#     "Environment :: GPU :: NVIDIA CUDA",    # NVIDIA CUDA support
#     "Environment :: GPU :: AMD ROCm",       # AMD ROCm support
#     "Environment :: GPU :: Intel Arc",      # Intel Arc support
#     "Environment :: NPU :: Huawei Ascend",  # Huawei Ascend support
#     "Environment :: GPU :: Apple Metal",    # Apple Metal support
# ]

dependencies = ["litellm==1.92.0", "google-genai==1.47.0"]

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

[project.urls]
Repository = "https://github.com/andy-ratsirarson/ComfyUI_ExternalAPI"
#  Used by Comfy Registry https://registry.comfy.org
Documentation = "https://github.com/andy-ratsirarson/ComfyUI_ExternalAPI/wiki"
"Bug Tracker" = "https://github.com/andy-ratsirarson/ComfyUI_ExternalAPI/issues"

[tool.comfy]
PublisherId = ""
DisplayName = "ComfyUI_ExternalAPI"
Icon = ""
includes = [] 
# "requires-comfyui" = ">=1.0.0"  # ComfyUI version compatibility

